--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,11 @@
+2016-03-01	Franck Paul
+
+ * v2.2.6 : Code styling, GUI mechanism reviewd
+
+2016-03-01	Pierre Van Glabeke
+
+ * v2.2.5 : corrections diverses
+
 2016-03-01	Franck Paul			<carnet.franck.paul@gmail.com>
 
  * v2.2.4 : Compliance with recent releases of Dotclear
