--- a/locales/fr/main.po
+++ b/locales/fr/main.po
@@ -5,15 +5,11 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-03-01 11:01+0100\n"
+"POT-Creation-Date: 2018-01-24 16:26+0100\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 
-#, fuzzy
 msgid "Trackback source check"
-msgstr "Activer la vérification de l'origine de rétroliens"
-
-msgid "Filter configuration updated"
-msgstr "La configuration du filtre a été mise à jour"
+msgstr "Vérification de l'origine de rétroliens"
 
 msgid "Verify trackback source"
 msgstr "Activer la vérification de l'origine de rétroliens"
@@ -26,18 +22,3 @@ msgstr "Activer les adresses jetables pour les rétroliens"
 
 msgid "Trackback address life time (in minutes):"
 msgstr "Durée de validité d'une adresse de rétrolien (en minutes) :"
-
-msgid "Valid"
-msgstr "Valider"
-
-msgid "View online help on Phénix.net"
-msgstr "Consulter l'aide en ligne sur Phénix.net"
-
-msgid "(help)"
-msgstr "(aide)"
-
-msgid "Online help"
-msgstr "Aide en ligne"
-
-#~ msgid "Filtered by %s."
-#~ msgstr "Filtré par %s."
