short notation for array (array() → [])

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2018-09-13  Franck Paul
+
+ * v2.3   : Code formatting (PHP 5.4+)
+
 2016-03-01	Franck Paul
 
  * v2.2.6 : Code styling, GUI mechanism reviewd
